// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`journey: global env.commit flows through all log paths given: [case1] person sets env.commit globally when: [t0] they call the logger directly then: commit is logged with it 1`] = `
{
  "env": {
    "commit": "global@abc123",
  },
  "level": "info",
  "message": "direct log call",
  "metadata": "{"action":"boot"}",
  "timestamp": "[masked]",
}
`;

exports[`journey: global env.commit flows through all log paths given: [case1] person sets env.commit globally when: [t1] they pass the logger into a withLogTrail-wrapped function then: context.log.info logs the global env 1`] = `
{
  "env": {
    "commit": "global@abc123",
  },
  "level": "info",
  "message": "sayHello.progress: hello from wrapped function",
  "metadata": undefined,
  "timestamp": "[masked]",
  "trail": {
    "stack": [
      "sayHello",
    ],
  },
}
`;

exports[`journey: global env.commit flows through all log paths given: [case1] person sets env.commit globally when: [t2] they pass the logger into a genContextLogTrail that has its own env supplied then: the more specific newly supplied env wins, whenever context.log.info is called 1`] = `
{
  "env": {
    "commit": "request@xyz789",
  },
  "level": "info",
  "message": "via request context",
  "metadata": "{"handler":"api"}",
  "timestamp": "[masked]",
  "trail": {
    "exid": "req_002",
    "stack": [],
  },
}
`;

exports[`journey: global env.commit flows through all log paths given: [case1] person sets env.commit globally when: [t2] they pass the logger into a genContextLogTrail that has its own env supplied then: the original env is preserved, whenever log is called directly 1`] = `
{
  "env": {
    "commit": "global@abc123",
  },
  "level": "info",
  "message": "global log after request",
  "metadata": undefined,
  "timestamp": "[masked]",
}
`;
